--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-router": "^1.44.4",
     "@tanstack/router-plugin": "^1.44.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
