--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/router-plugin": "^1.44.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
